[CHORE] Bug Fixes (#506)
This PR fixes the following bugs that resulted from adding in the
Federated functionality.

- [ALS-9593] Page should not remain highlighted when returning to
Explore/Discover
- [ALS-9592] Search results page number overlaps with arrow
- [ALS-9594] Prepare for Analysis page "Copy" button for token should
only work on click
- [ALS-9595] User cannot navigate to Manage Datasets
- [ALS-9533] Use solid for check icon

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -66,7 +66,7 @@ input[type='checkbox'] {
 
 select {
   @apply select;
-  padding: 0.5rem 1.25rem;
+  @apply py-2;
 }
 
 hr {
